# latcorr

./: .gitignore  LICENSE  README.md  pyproject.toml
example/preprocess/: README.md  basic_preprocess.py  strip_nucleon_c2pt.py  strip_nucleon_tmdpdf.py  strip_pion_c2pt.py  strip_pion_softff.py  strip_pion_tmdwf.py
src/latcorr/: __init__.py
src/latcorr/analysis/: __init__.py  pion_qda.py  proton_qpdf.py
src/latcorr/correlators/: __init__.py  _resampling.py  fh.py  pt2.py  pt3.py  qda.py  ratio.py
src/latcorr/ground_state/: __init__.py
src/latcorr/plotting/: __init__.py  corr_plots.py  plot_settings.py
src/latcorr/preprocess/: __init__.py  core.py  nucleon_c2pt.py  nucleon_tmdpdf.py  pion_c2pt.py  pion_softff.py  pion_tmdwf.py
src/latcorr/resampling/: __init__.py  core.py
src/latcorr/utils/: __init__.py  converter.py  logger.py
tests/: test_correlators_pt2.py  test_correlators_pt3.py  test_correlators_qda.py  test_correlators_ratio_fh.py  test_imports.py  test_preprocess.py  test_preprocess_nucleon_c2pt.py  test_preprocess_pion_c2pt.py  test_preprocess_pion_softff.py  test_preprocess_pion_tmdwf.py  test_preprocess_tmdpdf.py  test_resampling.py
