[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "latcorr"
version = "0.1.0"
description = "Python tools for lattice QCD data processing and analysis."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Jinchen He" },
]
dependencies = [
    "gvar",
    "h5py",
    "lsqfit",
    "matplotlib",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src/latcorr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
package = true
